fixed overflow-x bug and changed disabled button text color

--- a/static/grid.css
+++ b/static/grid.css
@@ -220,6 +220,7 @@ button:hover {
 
 button:disabled {
 	background-color: #61616f;
+	color: #1a1a21;
 }
 
 button:disabled:hover {
@@ -381,6 +382,7 @@ button:disabled:hover {
 	color: #fff;
 	left: 0;
 	overflow-y: auto;
+	overflow-x: hidden;
 	border-right: 2px solid #1a191e;
 	scrollbar-width: none;
 }
